Fix Search position alignment

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ top: 0px;
 #filter {
   margin-top: 4px;
   margin-bottom: 4px;
-  margin-left: 10%;
+  margin-left: auto;
   margin-right: auto;
   width: 400px;
   font-size: 20px;
